# ASDfR-Part1

./: CMakeLists.txt  README.md  package.xml  tracker.cpp
src/: avg_brightness_node.cpp
