<package format="3">
  <name>tracker</name>
  <version>0.1.0</version>
  <description>Detects bright objects in an image and computes their position.</description>
  <maintainer email="tkolios@todo.todo">tkolios</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
